--- a/1.5/Source/Grey_Goo/Grey_Goo.csproj
+++ b/1.5/Source/Grey_Goo/Grey_Goo.csproj
@@ -84,6 +84,11 @@
       <Link>Grey-Goo-Flavour-Pack\1.5\Defs\Factions\GG_Factions.xml</Link>
     </ReleaseFiles>
   </ItemGroup>
+  <ItemGroup>
+    <ReleaseFiles Include="..\..\Defs\Incidents\GG_World_Incidents.xml">
+      <Link>Grey-Goo-Flavour-Pack\1.5\Defs\Incidents\GG_World_Incidents.xml</Link>
+    </ReleaseFiles>
+  </ItemGroup>
   <Target Name="PostBuild" AfterTargets="Build" Condition=" '$(Configuration)' == 'Release' ">
     <RemoveDir Condition="Exists('../../../Release')" Directories="../../../Release" />
     <Delete Condition="Exists('../../../$(AssemblyName).zip')" Files="../../../$(AssemblyName).zip" />
