--- a/1.5/Source/Grey_Goo/Grey_Goo.csproj
+++ b/1.5/Source/Grey_Goo/Grey_Goo.csproj
@@ -46,6 +46,159 @@
       <Link>Attached/Rimworld/%(RecursiveDir)/%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\liquidmetal">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\liquidmetal</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\liquidmetal.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\liquidmetal.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\liquidmetal.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\liquidmetal.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\liquidmetal.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\liquidmetal.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\shaders">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\shaders</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\shaders.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\shaders.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\shaders.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\shaders.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\shaders.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\shaders.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\StandaloneLinux64">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\StandaloneLinux64</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\StandaloneLinux64.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\StandaloneLinux64.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\StandaloneLinux64.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\StandaloneLinux64.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\StandaloneLinux64.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\StandaloneLinux64.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\zoom">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\zoom</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\zoom.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\zoom.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\zoom.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\zoom.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneLinux64\zoom.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneLinux64\zoom.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\liquidmetal">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\liquidmetal</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\liquidmetal.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\liquidmetal.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\liquidmetal.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\liquidmetal.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\liquidmetal.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\liquidmetal.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\shaders">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\shaders</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\shaders.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\shaders.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\shaders.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\shaders.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\shaders.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\shaders.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\StandaloneOSX">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\StandaloneOSX</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\StandaloneOSX.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\StandaloneOSX.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\StandaloneOSX.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\StandaloneOSX.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\StandaloneOSX.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\StandaloneOSX.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\zoom">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\zoom</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\zoom.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\zoom.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\zoom.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\zoom.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneOSX\zoom.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneOSX\zoom.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\liquidmetal">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\liquidmetal</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\liquidmetal.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\liquidmetal.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\liquidmetal.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\liquidmetal.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\liquidmetal.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\liquidmetal.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\shaders">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\shaders</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\shaders.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\shaders.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\shaders.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\shaders.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\shaders.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\shaders.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\StandaloneWindows64">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\StandaloneWindows64</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\StandaloneWindows64.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\StandaloneWindows64.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\StandaloneWindows64.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\StandaloneWindows64.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\StandaloneWindows64.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\StandaloneWindows64.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\zoom">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\zoom</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\zoom.manifest">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\zoom.manifest</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\zoom.manifest.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\zoom.manifest.meta</Link>
+    </Content>
+    <Content Include="..\..\..\Materials\Bundles\StandaloneWindows64\zoom.meta">
+      <Link>Grey-Goo-Flavour-Pack\Materials\Bundles\StandaloneWindows64\zoom.meta</Link>
+    </Content>
     <Content Include="..\..\..\modlist.xml">
       <Link>Grey-Goo-Flavour-Pack\modlist.xml</Link>
     </Content>
@@ -82,6 +235,14 @@
 
     <ReleaseFiles Update="..\..\Defs\Factions\GG_Factions.xml">
       <Link>Grey-Goo-Flavour-Pack\1.5\Defs\Factions\GG_Factions.xml</Link>
+    </ReleaseFiles>
+
+    <ReleaseFiles Update="..\..\Defs\Buildings\GG_GooDefence.xml">
+      <Link>Grey-Goo-Flavour-Pack\1.5\Defs\Buildings\GG_GooDefence.xml</Link>
+    </ReleaseFiles>
+
+    <ReleaseFiles Update="..\..\Defs\GG_Terrain.xml">
+      <Link>Grey-Goo-Flavour-Pack\1.5\Defs\GG_Terrain.xml</Link>
     </ReleaseFiles>
   </ItemGroup>
   <ItemGroup>
