--- a/1.5/Source/Grey_Goo/Grey_Goo.csproj
+++ b/1.5/Source/Grey_Goo/Grey_Goo.csproj
@@ -28,10 +28,14 @@
       <HintPath>../../../../../RimWorldWin64_Data/Managed/Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
+      <Reference Include="UnityEngine.CoreModule">
+          <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.CoreModule.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="UnityEngine.IMGUIModule">
+          <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.IMGUIModule.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
       <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.TextRenderingModule.dll</HintPath>
       <Private>False</Private>
