New shambler incident that spawns a single shambler 10 times a day

--- a/1.5/Source/Grey_Goo/Grey_Goo.csproj
+++ b/1.5/Source/Grey_Goo/Grey_Goo.csproj
@@ -254,6 +254,10 @@
       <Link>Grey-Goo-Flavour-Pack\1.5\Defs\Incidents\GG_World_Incidents.xml</Link>
     </ReleaseFiles>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="HarmonyPatches\IncidentWorker_ShamblerSwarmAnimals_Patch.cs" />
+    <Compile Remove="HarmonyPatches\IncidentWorker_ShamblerSwarmSmall_Patch.cs" />
+  </ItemGroup>
   <Target Name="PostBuild" AfterTargets="Build" Condition=" '$(Configuration)' == 'Release' ">
     <RemoveDir Condition="Exists('../../../Release')" Directories="../../../Release" />
     <Delete Condition="Exists('../../../$(AssemblyName).zip')" Files="../../../$(AssemblyName).zip" />
