--- a/1.5/Source/Grey_Goo/Grey_Goo.csproj
+++ b/1.5/Source/Grey_Goo/Grey_Goo.csproj
@@ -44,6 +44,11 @@
           <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.AssetBundleModule.dll</HintPath>
           <Private>False</Private>
       </Reference>
+      <Reference Include="KeyzMiscResources">
+          <HintPath Condition="Exists('$(SteamPath)../../../../../../../workshop/content/294100/3355560776/1.5/Assemblies/Keyz_Misc_Resources.dll')">$(SteamPath)../../../../../../../workshop/content/294100/3355560776/1.5/Assemblies/Keyz_Misc_Resources.dll</HintPath>
+          <HintPath Condition="!Exists('$(SteamPath)../../../../../../../workshop/content/294100/3355560776/1.5/Assemblies/Keyz_Misc_Resources.dll')">$(SteamPath)../../../../../Mods/KeyzMiscResources/1.5/Assemblies/Keyz_Misc_Resources.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Condition="Exists('../../../../../Data')" Include="../../../../../Data/**/*">
