Compile against the right BigAndSmall, and auto-research anomaly bits

--- a/1.5/Source/Grey_Goo/Grey_Goo.csproj
+++ b/1.5/Source/Grey_Goo/Grey_Goo.csproj
@@ -19,7 +19,7 @@
     <DebugType>portable</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>true</Optimize>
   </PropertyGroup>
