--- a/1.5/Source/Grey_Goo-BS/Grey_Goo-BS.csproj
+++ b/1.5/Source/Grey_Goo-BS/Grey_Goo-BS.csproj
@@ -19,7 +19,7 @@
     <DebugType>portable</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <Optimize>true</Optimize>
   </PropertyGroup>
@@ -40,12 +40,6 @@
         <HintPath Condition="Exists('../../../../BigSmall_Framework')">../../../../BigSmall_Framework/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
         <HintPath Condition="Exists('../../../../2925432336') and !Exists('../../../../BigSmall_Framework')">../../../../2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
         <HintPath Condition="!Exists('../../../../BigSmall_Framework') and Exists('../../../../../../../workshop/content/294100/2925432336')">../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
-        <Private>False</Private>
-    </Reference>
-    <Reference Include="BigAndSmall">
-        <HintPath Condition="Exists('../../../../BigSmall_Framework')">../../../../BigSmall_Framework/1.5/Main/Assemblies/BigAndSmall.dll</HintPath>
-        <HintPath Condition="Exists('../../../../2925432336') and !Exists('../../../../BigSmall_Framework')">../../../../2925432336/1.5/Main/Assemblies/BigAndSmall.dll</HintPath>
-        <HintPath Condition="!Exists('../../../../BigSmall_Framework') and Exists('../../../../../../../workshop/content/294100/2925432336')">../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BigAndSmall.dll</HintPath>
         <Private>False</Private>
     </Reference>
     <Reference Include="BSXeno.dll">
