--- a/1.5/Source/Grey_Goo-BS/Grey_Goo-BS.csproj
+++ b/1.5/Source/Grey_Goo-BS/Grey_Goo-BS.csproj
@@ -25,27 +25,30 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>../../../../../RimWorldWin64_Data/Managed/Assembly-CSharp.dll</HintPath>
+      <HintPath Condition="Exists('../../../../../RimWorldWin64_Data/Managed/Assembly-CSharp.dll')">../../../../../RimWorldWin64_Data/Managed/Assembly-CSharp.dll</HintPath>
+      <HintPath Condition="Exists('../../../../../Contents/Resources/Data/Managed/Assembly-CSharp.dll')">../../../../../Contents/Resources/Data/Managed/Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.CoreModule.dll</HintPath>
+      <HintPath Condition="Exists('../../../../../RimWorldWin64_Data/Managed/UnityEngine.CoreModule.dll')">../../../../../RimWorldWin64_Data/Managed/UnityEngine.CoreModule.dll</HintPath>
+      <HintPath Condition="Exists('../../../../../Contents/Resources/Data/Managed/UnityEngine.CoreModule.dll')">../../../../../Contents/Resources/Data/Managed/UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>../../../../../RimWorldWin64_Data/Managed/UnityEngine.TextRenderingModule.dll</HintPath>
+      <HintPath Condition="Exists('../../../../../RimWorldWin64_Data/Managed/UnityEngine.TextRenderingModule.dll')">../../../../../RimWorldWin64_Data/Managed/UnityEngine.TextRenderingModule.dll</HintPath>
+      <HintPath Condition="Exists('../../../../../Contents/Resources/Data/Managed/UnityEngine.TextRenderingModule.dll')">../../../../../Contents/Resources/Data/Managed/UnityEngine.TextRenderingModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BetterPrerequisites">
-        <HintPath Condition="Exists('../../../../BigSmall_Framework')">../../../../BigSmall_Framework/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
-        <HintPath Condition="Exists('../../../../2925432336') and !Exists('../../../../BigSmall_Framework')">../../../../2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
-        <HintPath Condition="!Exists('../../../../BigSmall_Framework') and Exists('../../../../../../../workshop/content/294100/2925432336')">../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
+        <HintPath Condition="Exists('../../../../BigSmall_Framework/1.5/Main/Assemblies/BetterPrerequisites.dll')">../../../../BigSmall_Framework/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
+        <HintPath Condition="Exists('../../../../2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll')">../../../../2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
+        <HintPath Condition="Exists('../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll')">../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BetterPrerequisites.dll</HintPath>
         <Private>False</Private>
     </Reference>
     <Reference Include="BSXeno.dll">
-        <HintPath Condition="Exists('../../../../BigSmall_Framework')">../../../../BigSmall_Framework/1.5/Main/Assemblies/BSXeno.dll</HintPath>
-        <HintPath Condition="Exists('../../../../2925432336') and !Exists('../../../../BigSmall_Framework')">../../../../2925432336/1.5/Main/Assemblies/BSXeno.dll</HintPath>
-        <HintPath Condition="!Exists('../../../../BigSmall_Framework') and Exists('../../../../../../../workshop/content/294100/2925432336')">../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BSXeno.dll</HintPath>
+        <HintPath Condition="Exists('../../../../BigSmall_Framework/1.5/Main/Assemblies/BSXeno.dll')">../../../../BigSmall_Framework/1.5/Main/Assemblies/BSXeno.dll</HintPath>
+        <HintPath Condition="Exists('../../../../2925432336/1.5/Main/Assemblies/BSXeno.dll')">../../../../2925432336/1.5/Main/Assemblies/BSXeno.dll</HintPath>
+        <HintPath Condition="Exists('../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BSXeno.dll')">../../../../../../../workshop/content/294100/2925432336/1.5/Main/Assemblies/BSXeno.dll</HintPath>
         <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -61,32 +64,32 @@
       <Link>Attached/Rimworld/%(RecursiveDir)/%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Assemblies\Thirst_Flavour_Pack-BS.dll">
-      <Link>RedMattis.BetterPrerequisites\1.5\Assemblies\Thirst_Flavour_Pack-BS.dll</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Assemblies/Thirst_Flavour_Pack-BS.dll">
+      <Link>RedMattis.BetterPrerequisites/1.5/Assemblies/Thirst_Flavour_Pack-BS.dll</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Assemblies\Thirst_Flavour_Pack-BS.pdb">
-      <Link>RedMattis.BetterPrerequisites\1.5\Assemblies\Thirst_Flavour_Pack-BS.pdb</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Assemblies/Thirst_Flavour_Pack-BS.pdb">
+      <Link>RedMattis.BetterPrerequisites/1.5/Assemblies/Thirst_Flavour_Pack-BS.pdb</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Defs\HediffDefs\MSS_GG_Hediffs_Local_Misc.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Defs\HediffDefs\MSS_GG_Hediffs_Local_Misc.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Defs/HediffDefs/MSS_GG_Hediffs_Local_Misc.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Defs/HediffDefs/MSS_GG_Hediffs_Local_Misc.xml</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Defs\JobDefs\MSS_GG_Jobs_Shamblers.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Defs\JobDefs\MSS_GG_Jobs_Shamblers.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Defs/JobDefs/MSS_GG_Jobs_Shamblers.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Defs/JobDefs/MSS_GG_Jobs_Shamblers.xml</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Defs\PawnKinds\MSS_GG_GoreBeast.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Defs\PawnKinds\MSS_GG_GoreBeast.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Defs/PawnKinds/MSS_GG_GoreBeast.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Defs/PawnKinds/MSS_GG_GoreBeast.xml</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Defs\ThinkTreeDefs\MSS_GG_Shamblers.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Defs\ThinkTreeDefs\MSS_GG_Shamblers.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Defs/ThinkTreeDefs/MSS_GG_Shamblers.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Defs/ThinkTreeDefs/MSS_GG_Shamblers.xml</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Languages\English\Keyed\MSS_GG_BS.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Languages\English\Keyed\MSS_GG_BS.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Languages/English/Keyed/MSS_GG_BS.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Languages/English/Keyed/MSS_GG_BS.xml</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Patches\MSS_GG_ShamblerSwarm.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Patches\MSS_GG_ShamblerSwarm.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Patches/MSS_GG_ShamblerSwarm.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Patches/MSS_GG_ShamblerSwarm.xml</Link>
     </Content>
-    <Content Include="..\..\..\Compatibility\RedMattis.BetterPrerequisites\1.5\Patches\MSS_GG_StatParts.xml">
-      <Link>RedMattis.BetterPrerequisites\1.5\Patches\MSS_GG_StatParts.xml</Link>
+    <Content Include="../../../Compatibility/RedMattis.BetterPrerequisites/1.5/Patches/MSS_GG_StatParts.xml">
+      <Link>RedMattis.BetterPrerequisites/1.5/Patches/MSS_GG_StatParts.xml</Link>
     </Content>
   </ItemGroup>
   <ItemGroup>
